# AiFund

./: .gitignore  README.md  pyproject.toml  requirements.txt  whre.md
.github/workflows/: sync-website-content.yml
src/indexfundmanagercrew/: crew.py  main.py  memory_store.py  scheduler.py
src/indexfundmanagercrew/config/: agents.yaml  tasks.yaml
src/indexfundmanagercrew/tools/api/: Cookie.py
src/indexfundmanagercrew/tools/deployment/: README.md  document_deploy.py
src/indexfundmanagercrew/tools/research_tools/: cookie_tool.py  defillama_tool.py
src/indexfundmanagercrew/tools/social/: twitter_client.py  twitter_publisher.py
src/indexfundmanagercrew/tools/web3/: index_fund.py  main.py  social_metrics.py  token_metrics.py
src/indexfundmanagercrew/tools/web3/contract_deploy/: deploy.py  deploy_manager.py
src/indexfundmanagercrew/tools/website/: website_publisher.py
