[project]
name = "indexfundmanagercrew"
version = "0.1.0"
description = "IndexFundManagerCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "google-generativeai>=0.3.2",
    "aiohttp>=3.9.1",
    "defillama>=2.3.0"
]

[project.scripts]
indexfundmanagercrew = "indexfundmanagercrew.main:run"
run_crew = "indexfundmanagercrew.main:run"
train = "indexfundmanagercrew.main:train"
replay = "indexfundmanagercrew.main:replay"
test = "indexfundmanagercrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
